fix(slice-3): address code-reviewer BLOCKERs and MAJORs
BLOCKER-1: Add userId filterExpression to SearchRequest — without it every user
could read other users' document chunks (IDOR on vector store data).
BLOCKER-2: Guard null return from ChatClient.content() (content-filtered response).
MAJOR-1: Add @Size(max=2000) to ChatRequest.question — prevents token-limit errors
and unbounded LLM spend.
MAJOR-2: Cache prompt template in @PostConstruct — was reloading from disk per request.
MAJOR-3: ProblemDetailControllerAdvice now includes field:message detail in 400 responses.
MINOR-1: Reverse {context}/{question} substitution order to prevent placeholder
injection from stored chunk text.
MINOR-2: Null-guard on jwt parameter before calling getSubject().
MINOR-3: Use Stream.toList() (Java 16+) instead of Collectors.toList().
Fix ChatServiceTest.setUp() to call init() explicitly (PostConstruct not invoked by Mockito).

https://claude.ai/code/session_01HuL8mAHoqWczedeEEyuavW